[package]
name = "appstoreconnect"
version = "0.1.5"
edition = "2021"
description = "appstoreconnect client"
license = "MIT"
repository = "https://github.com/niuhuan/appstoreconnect-rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
reqwest = "0.11"    
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
base64 = "0"
