[package]
name = "appstoreconnect"
version = "0.1.11"
edition = "2021"
description = "appstoreconnect client"
license = "MIT"
repository = "https://github.com/niuhuan/appstoreconnect-rs"
resolver = "2"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
reqwest = { version = "0.11", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = "1.34.0"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["rt", "macros"] }
base64 = "0.21.5"

[features]
default = ["reqwest/default"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
